--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -15,7 +15,7 @@ html {
   margin: 0 !important;
   padding: 0 !important;
   max-width: 100%;
-  overflow-y: auto;
+  overflow-y: hidden;
   overflow-x: hidden !important;
 }
 
@@ -32,13 +32,13 @@ body {
   top: 0 !important;
   left: 0 !important;
   padding: 0 !important;
-  overflow-y: auto;
+  overflow-y: hidden;
   overflow-x: hidden !important;
 
   #root {
-    position: relative;
     height: 100%;
     min-height: 100%;
+    overflow-x: hidden !important;
   }
 }
 
